# CVDevelop

./: CMakeLists.txt
sample/: CMakeLists.txt
sample/OpenCV/: CMakeLists.txt  sample.helloOpenCV.cpp
sample/QT/: CMakeLists.txt  helloWidget.cpp  helloWidget.h  helloWidget.ui  sample.helloQT.cpp
script/: 3rdpart.bat  build.bat
